--- a/projects/test-lib/src/app/app.component.html
+++ b/projects/test-lib/src/app/app.component.html
@@ -1,10 +1,1 @@
-<lib-code-editor [language]="'Html'" (code)="code($event,'html')"></lib-code-editor>
-<!-- <lib-code-editor (code)="code($event,'css')"></lib-code-editor> -->
-<lib-code-render [html]="html+css"></lib-code-render>
-<br>
-<br><br><br> @for (topic of topicsMenu; track $index) {
-<lib-rounded-button [routerLink]="topic.route" [text]="topic.name" class="pacifico-regular" [background]="'#8338ec'" [icon]="'home'">
-
-</lib-rounded-button>
-
-}
+<!-- <app-card [cardInfo]="cardInfo"></app-card> -->
